Extended lib.rs to be able to use Dysk as a library.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -21,6 +21,9 @@ termimad = "0.32"
 [profile.release]
 strip = true
 
+[lib]
+name = "dysk"
+
 [patch.crates-io]
 # termimad = { path = "../../termimad" }
 
