--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,16 +16,22 @@ exclude = ["website", "dysk*.zip"]
 build = "build.rs"
 resolver = "1"
 
-[dependencies]
-dysk-cli = { version = "2.10.1", path = "cli" } # beware: version is also in build dependencies
-
 [build-dependencies]
 clap = { version = "4.4", features = ["derive", "cargo"] }
 clap_complete = "4.4"
 clap_mangen = "0.2.12"
-dysk-cli = { version = "2.10.1", path = "cli" }
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.7"
+
+[dependencies]
+bet = "1.0.4"
+clap = { version = "4.4", features = ["derive", "cargo"] }
+clap-help = "1.4"
+file-size = "1.0.3"
+lfs-core = "0.12"
+serde = "1.0"
+serde_json = "1.0"
+termimad = "0.32"
 
 [profile.release]
 strip = true
